JWT is implimented, User can register and log in our application. We are getting toke succesfully. Now, I will use that toke from frontside.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=blog
+spring.datasource.url=jdbc:postgresql://ruby.db.elephantsql.com:5432/dbgyiicn
+spring.datasource.username=dbgyiicn
+spring.datasource.password=la_Ty2R1Txvx9YGylEpuhII6H3oMzIhR
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+springdoc.swagger-ui.path=/swagger-ui.html
+jwt.secret=BADIK
+
