--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 springdoc.swagger-ui.path=/swagger-ui.html
 jwt.secret=BADIK
+spring.jpa.show-sql=true
 
 
